# networthlab

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml  rxconfig.py
config/: account_groups.example.yaml  complex_securities.yaml  security_overrides.example.yaml
docs/superpowers/plans/: 2026-05-25-market-exposure-dashboard-implementation.md
docs/superpowers/specs/: 2026-05-24-market-exposure-dashboard-design.md
networthlab/: __init__.py  networthlab.py
networthlab/components/cards/: __init__.py  account_card.py  chart_card.py  stat_card.py
networthlab/components/charts/: __init__.py  allocation_chart.py  fire_progress.py  loan_timeline.py  net_worth_chart.py
networthlab/components/exposure/: __init__.py  chips.py  drilldown_modal.py  exposure_tile.py  kpi_bar.py
networthlab/models/: __init__.py  accounts.py  exposure.py  projections.py  settings.py
networthlab/pages/: __init__.py  dashboard.py  exposure.py  fire.py  loans.py  projections.py  settings.py
networthlab/services/: __init__.py  calculations.py  etf_lookthrough.py  exposure.py  exposure_config.py  lunch_money.py  storage.py  wealthsimple.py
networthlab/state/: __init__.py  app_state.py  exposure_state.py  fire_state.py  loan_state.py  projection_state.py
networthlab/styles/: __init__.py  theme.py
scripts/: debug_ws_raw.py  inspect_cache.py  precompile_check.py
tests/: __init__.py  test_etf_lookthrough.py  test_exposure_config.py  test_exposure_models.py  test_exposure_service_aggregate.py  test_exposure_service_grouping.py  test_wealthsimple_service.py
(+11 files in other folders)
