[project]
name = "networthlab"
version = "0.1.0"
description = "Personal financial projection app powered by Lunch Money"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "reflex>=0.6.0",
    "lunchable>=1.4.2",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
